--- a/index.html
+++ b/index.html
@@ -7,11 +7,16 @@
     <link rel="stylesheet" href="./styles/main.css">
     <title>Grilled Cheese</title>
 </head>
-<body>
-    <h1 class="text-center">Build Your Grilled Cheese</h1>
-    <div class="col-6 text-center">
-        <div class="m-1 p-2" id="bread-container"></div>
-        <div class="m-1 p-2" id="cheese-container"></div>
+<body class="text-center">
+    <h1>Build Your Grilled Cheese</h1>
+    <div class="row">
+        <div class="col-6 text-center">
+            <h2>Bread</h2>
+            <div class="m-1 p-2" id="bread-container"></div>
+            <h2>Cheese</h2>
+            <div class="m-1 p-2" id="cheese-container"></div>
+        </div>
+        <div class="col-6" id="sandwich-container"></div>
     </div>
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
